--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div>
 		<h3>Bienvenido/a, esta es mi página web personal</h3>
 		<p>Soy Amparo, una estudiante de 2 bachillerato de salud</p>
-		<img src="img/amparo.svg" width=200>
+		<img src="amparo.svg" width=200>
 		<h2><b>¿Quién soy?</b></h2>
 		<ul>
 			<li>👩🏽‍🎓 Estudiante</li>
