--- a/index.html
+++ b/index.html
@@ -4,31 +4,50 @@
 	<title>Mi página web</title>
 	<meta name="description" content="Página personal">
 	<meta charset="utf-8">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Libre+Caslon+Display&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif+Hentaigana:wght@500&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="páginapersonal.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		
+		/* Small devices (phones, 992px and down) */
+		@media screen and (max-width: 992px){
+			.row{ display:flex; flex-direction:column; width:100%;}
+			.mn{text-align:center; width:100%;}
+		}
+		/* Large devices (large laptops and destoks, 992px and up) */
+		@media screen and (min-width: 992px){
+			.row{display:flex; flex-direction: row; width:100%;}
+			.mn{text-align:center; width:50%;}
+
+		}
+	</style>
+	
 </head>
 
 <body>
-	<div align="center">
+	<div id="cabecera" align="center">
 		<h1>Web personal de Amparo</h1>
 	</div>
-	<div align="center">
-		<a href="recursos.html"> Recursos </a>
+	<div id="nav" class="row">
+		<a class="mn" href="recursos.html" > Recursos </a>
+		<a class="mn" href="https://www.google.com/" target="_blanket"> Google</a>
 	</div>
-	<div>
+	<div id="contenido">
+		<img class="foto" src="img/amparo.svg" width=25%>
 		<h3>Bienvenido/a, esta es mi página web personal</h3>
 		<p>Soy Amparo, una estudiante de 2 bachillerato de salud</p>
-		<img src="amparo.svg" width=200>
-		<h2><b>¿Quién soy?</b></h2>
+		
+		<p><b>¿Quién soy?</b></p>
 		<ul>
 			<li>👩🏽‍🎓 Estudiante</li>
 			<li>🏐 Deportista</li>
 			<li>🏙️ Sevilla</li>
 			<li>📩 a.aalvcam717@iesfernandodeherrera.es</li>
-			<li>⬇︎ amparo_.17atc</li>
 		</ul>
-		<br>
 	</div>
-	<div>
-		<hr>
+	<div id="pie">
 		<p>Copyright: Amparo. 2024</p>
 	</div>
 </body>
