--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<a class="mn" href="https://www.google.com/" target="_blanket"> Google</a>
 	</div>
 	<div id="contenido">
-		<img class="foto" src="img/amparo.svg" width=25%>
+		<img class="foto" src="amparo.svg" width=25%>
 		<h3>Bienvenido/a, esta es mi página web personal</h3>
 		<p>Soy Amparo, una estudiante de 2 bachillerato de salud</p>
 		
